exercise3/nginx-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: mywebapp-deployment
spec:
    replicas: 3
    template:
        metadata:
            labels:
                k8s-app: myweb-app-v1
        spec:
            containers:
                - name: myweb-app-v1
                  image: cloudnautique/nginx-web-tier:latest
                  ports:
                      - containerPort: 80
