exercise3/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
    name: myweb-app
    labels:
        k8s-app: myweb-app-v1
spec:
    ports:
        - port: 80
          targetPort: 80
          protocol: TCP
          name: http
    selector:
        k8s-app: myweb-app-v1
